--- a/docker_example/Chat/chat.html
+++ b/docker_example/Chat/chat.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>websocket test</title>
     <script src="./static_resource/js/base.js?ver=12414124"></script>
-    <script src="./static_resource/js/function.js?ver=dasdawe24"></script>
+<!--    <script src="./static_resource/js/function.js?ver=dasdawe24"></script>-->
 
     <!--    <script src="./static_resource/js/variable.js?ver=12414124"></script>-->
     <!--    <script src="./static_resource/js/langvage/lang_cn.js?ver=12414124"></script>-->
