--- a/project/chat_forum_more_project/chat/index.html
+++ b/project/chat_forum_more_project/chat/index.html
@@ -2,62 +2,26 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js" charset="utf-8"></script>
 </head>
 <body>
 </body>
 <script type="text/javascript" charset="utf-8">
-    function loadJs (sPath = '') {
-        if (!sPath) {
-            console.log('loadJs sPath is null');
+    function loadJs (sSrc = '') {
+        if (!sSrc) {
+            console.log('loadJs sSrc is null');
             return false;
         }
 
         let dom = document.createElement('script');
         dom.type = 'text/javascript';
-        dom.src = sPath + '?ver=' + queryJsCssFileVersion('js', sPath);
+        dom.src = sSrc ;
 
         let head = document.getElementsByTagName('head')[0];
         dom.charset = typeof sCharset !== 'undefined' ? sCharset : 'utf-8';
         head.appendChild(dom);
     }
 
-    function queryJsCssFileVersion (sType = 'js', sPath = '') {
-        if (!sPath) {
-            console.log('queryJsCssFileVersion sPath is null');
-            return false;
-        }
-
-        let aVersion = [];
-        switch (sType) {
-            case 'js' :
-                aVersion = aJsVersion;
-                break;
-            default:
-                console.log('sType is not allowed');
-                return false;
-                break;
-        }
-
-        if (typeof aVersion[sPath] === 'undefined') {
-            return sDefaultVersionNumber;
-            return false;
-        }
-
-        return aVersion[sPath];
-    }
-
-    function getMasterHost () {
-        let sTag = '.';
-        let aUrl = window.location.host.split(sTag);
-
-        return aUrl[aUrl.length - 2] + sTag + aUrl[aUrl.length - 1];
-    }
-
-    const sIndexJs = window.location.protocol + '//' + getMasterHost() + '/public_static_resource/js/index.js';
-    var aJsVersion = []; // js 文件版本号
-    aJsVersion[sIndexJs] = 'safsasgwgw';
-
+    const sIndexJs = window.location.origin + '/public_static_resource/js/index.js?ver=dasdasdasdasdas';
     window.onload = loadJs(sIndexJs);
 </script>
 </html>
