--- a/project/chat_forum_more_project/chat/index.html
+++ b/project/chat_forum_more_project/chat/index.html
@@ -6,21 +6,37 @@
 <body>
 </body>
 <script type="text/javascript" charset="utf-8">
-    function loadJs (sSrc = '') {
-        if (!sSrc) {
-            console.log('loadJs sSrc is null');
+    function loadJs (s = '', b = true, c = false) {
+        if (!s) {
             return false;
         }
 
-        let dom = document.createElement('script');
-        dom.type = 'text/javascript';
-        dom.src = sSrc ;
+        let o = document.createElement('script');
+        o.type = 'text/javascript';
+        o.src = s ;
+        o.async = b;
 
-        let head = document.getElementsByTagName('head')[0];
-        dom.charset = typeof sCharset !== 'undefined' ? sCharset : 'utf-8';
-        head.appendChild(dom);
+        if (c) {
+            if (o.addEventListener) {
+                o.addEventListener('load', function () {
+                    window[c]();
+                }, false);
+            } else if (o.attachEvent) {
+                o.attachEvent('onreadystatechange', function () {
+                    var target = window.event.srcElement;
+                    if (target.readyState == 'loaded') {
+                        window[c]();
+                    }
+                });
+            }
+        }
+
+        let h = document.getElementsByTagName('head')[0];
+        o.charset = sCharset;
+        h.appendChild(o);
     }
 
+    const sCharset = 'utf-8'; // 编码
     const sIndexJs = window.location.origin + '/public_static_resource/js/index.js?ver=dasdasdasdasdas';
     window.onload = loadJs(sIndexJs);
 </script>
