--- a/project/chat_forum_more_project/chat/index.html
+++ b/project/chat_forum_more_project/chat/index.html
@@ -36,8 +36,19 @@
         h.appendChild(o);
     }
 
+    var sOrigin = '';
+    function queryMasterOrigin () {
+        let sTag = '.';
+        sOrigin = window.location.origin;
+        let aOrigin = sOrigin.split(sTag);
+        let aOriginLength = aOrigin.length;
+        sOrigin = window.location.protocol + '//' + aOrigin[aOriginLength - 2] + sTag + aOrigin[aOriginLength - 1];
+        return sOrigin;
+    }
+    queryMasterOrigin();
+
     const sCharset = 'utf-8'; // 编码
-    const sIndexJs = window.location.origin + '/public_static_resource/js/index.js?ver=dasdasdasdasdas';
+    const sIndexJs = sOrigin + '/public_static_resource/js/index.js?ver=dasdasdasdasdas';
     window.onload = loadJs(sIndexJs);
 </script>
 </html>
