--- a/project/chat_forum_more_project/web/storage.html
+++ b/project/chat_forum_more_project/web/storage.html
@@ -11,9 +11,103 @@
             return false;
         }
 
+        if (!event.data) {
+            // postMessageToFather({message:false});
+            top.postMessage({func: event.data.after, message:false}, event.origin);
+            return false;
+        }
+
+        if (!event.data.action || !event.data.key || !event.data.after ) {
+            top.postMessage({func: event.data.after, message: false}, event.origin);
+            return false;
+        }
+
         console.log(event.data);
-        console.log(event.data.action);
         top.postMessage("子页面收到", event.origin);
+
+        switch (event.data.action) {
+            case 'get' :
+                top.postMessage({func: event.data.after, message: myStorage.get(event.data.key)}, event.origin);
+                break;
+        }
     }, false);
+
+    let myStorage = (function myStorage () {
+        if (!window.localStorage ) {
+            console.log('localstorage error');
+            return false;
+        }
+
+        let set = function (sKey, sValue, iLeftTime = false) {
+            //存储
+            sValue = iLeftTime ? {'sData': sValue, 'iLiftTime': iLeftTime * 1000, 'iSetTime': getNowTime()} : {'sData': sValue};
+
+            // console.log(sValue);
+            sValue = JSON.stringify(sValue);
+            // console.log(sValue);
+            sValue = localstorageEncodeValue(sValue);
+
+            sKey = setLocalstorageKey(sKey);
+
+            // console.log('set storage key ' + sKey);
+            // console.log('set storage value ' + sValue);
+            let bResult = localStorage.setItem(sKey, sValue);
+            return bResult === undefined ? true : false;
+        };
+
+        let get = function (sKey, bUpdateLifttime = true) {
+            //读取
+            let oData = localStorage.getItem(sKey);
+            if (!oData) {
+                return false;
+            }
+            // oData = localstorageDecodeValue(oData);
+            // oData = JSON.parse(oData);
+            // console.log('get storage key ' + sKey);
+            // console.log('get storage value ');
+            // console.log(oData);
+            // if (!oData) {
+            //     return false;
+            // }
+
+            try {
+                if (typeof oData.iLiftTime !== 'undefined') {
+                    if (getNowTime() - oData.iSetTime > oData.iLiftTime) {
+                        remove(sKey);
+                        return false;
+                    } else {
+                        if (bUpdateLifttime) {
+                            set(sKey, oData.sData, oData.iLiftTime / 1000);
+                        }
+                    }
+                }
+
+                return oData.sData;
+            } catch (e) {}
+        };
+
+        let remove = function (sKey) {
+            //读取
+            sKey = setLocalstorageKey(sKey);
+            let oData = localStorage.getItem(sKey);
+            if(!oData){
+                return true;
+            }
+
+            return localStorage.removeItem(sKey);
+        };
+
+        let clear = function() {
+            //清除对象
+            localStorage.clear();
+        };
+
+        return {
+            set : set,
+            get : get,
+            remove : remove,
+            clear : clear
+        };
+    })();
 </script>
 </html>
