完善跨域localstorage，个性化css

--- a/project/chat_forum_more_project/web/storage.html
+++ b/project/chat_forum_more_project/web/storage.html
@@ -2,105 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="/public_static_resource/js/public/localstorage_post_message.js?ver=dasdasdasdasdas" charset="utf-8"></script>
 </head>
 <body>
 </body>
-<script>
-    window.addEventListener('message',function(event){
-        if (window.parent !== event.source) {
-            return false;
-        }
-
-        if (!event.data) {
-            top.postMessage({after: event.data.after, message:false}, event.origin);
-            return false;
-        }
-
-        if (!event.data.action || !event.data.key || !event.data.after ) {
-            top.postMessage({after: event.data.after, message: false}, event.origin);
-            return false;
-        }
-
-        console.log('========================');
-        console.log('收到' + event.origin);
-        console.log(event.data);
-        console.log(event.data.action);
-
-        switch (event.data.action) {
-            case 'get' :
-                top.postMessage({after: event.data.after, message: myStorage.get(event.data.key)}, event.origin);
-                break;
-            case 'set' :
-                top.postMessage({after: event.data.after, message: myStorage.set(event.data.key, event.data.message, event.data.leftTime)}, event.origin);
-                break;
-        }
-        console.log('========================');
-    }, false);
-
-    let myStorage = (function myStorage () {
-        if (!window.localStorage ) {
-            console.log('localstorage error');
-            return false;
-        }
-
-        let set = function (sKey, sValue, iLeftTime = false) {
-            //存储
-            sValue = iLeftTime ? {'sData': sValue, 'iLiftTime': iLeftTime * 1000, 'iSetTime': getNowTime()} : {'sData': sValue};
-
-            sValue = JSON.stringify(sValue);
-            console.log(sKey);
-            console.log(sValue);
-
-            let bResult = localStorage.setItem(sKey, sValue);
-            return bResult === undefined ? true : false;
-        };
-
-        let get = function (sKey, bUpdateLifttime = true) {
-            //读取
-            console.log(sKey);
-            let oData = localStorage.getItem(sKey);
-            if (!oData) {
-                return false;
-            }
-            oData = JSON.parse(oData);
-
-            if (typeof oData.iLiftTime !== 'undefined') {
-                if (getNowTime() - oData.iSetTime > oData.iLiftTime) {
-                    remove(sKey);
-                    return false;
-                } else {
-                    if (bUpdateLifttime) {
-                        set(sKey, oData.sData, oData.iLiftTime / 1000);
-                    }
-                }
-            }
-
-            console.log(oData.sData);
-            return oData.sData;
-        };
-
-        let remove = function (sKey) {
-            //读取
-            sKey = setLocalstorageKey(sKey);
-            let oData = localStorage.getItem(sKey);
-            if(!oData){
-                return true;
-            }
-
-            return localStorage.removeItem(sKey);
-        };
-
-        let clear = function() {
-            //清除对象
-            localStorage.clear();
-        };
-
-        return {
-            set : set,
-            get : get,
-            remove : remove,
-            clear : clear
-        };
-    })();
-</script>
 </html>
