--- a/project/chat_forum_more_project/chat/index.html
+++ b/project/chat_forum_more_project/chat/index.html
@@ -6,6 +6,8 @@
 <body style="background: #e7e6cb;">
 </body>
 <script type="text/javascript" charset="utf-8">
+    const head = document.getElementsByTagName('head')[0];
+
     function loadJs (s = '', b = true, c = false) {
         if (!s) {
             return false;
@@ -13,8 +15,9 @@
 
         let o = document.createElement('script');
         o.type = 'text/javascript';
-        o.src = s ;
+        o.src = s;
         o.async = b;
+        o.charset = sCharset;
 
         if (c) {
             if (o.addEventListener) {
@@ -31,9 +34,7 @@
             }
         }
 
-        let h = document.getElementsByTagName('head')[0];
-        o.charset = sCharset;
-        h.appendChild(o);
+        head.appendChild(o);
     }
 
     var sOrigin = '';
