完善 console log，css 变量，遮罩层

--- a/project/chat_forum_more_project/chat/index.html
+++ b/project/chat_forum_more_project/chat/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 </head>
-<body style="background: #e7e6cb;">
+<body>
 </body>
 <script type="text/javascript" charset="utf-8">
     const head = document.getElementsByTagName('head')[0];
