--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -2,57 +2,8 @@
 <html>
 <head>
     <meta charset="utf-8">
+    <script type="text/javascript" src="/public_static_resource/js/index.js?ver=dasdasdasdasdas" async="" charset="utf-8"></script>
 </head>
 <body>
 </body>
-<script type="text/javascript" charset="utf-8">
-    const head = document.getElementsByTagName('head')[0];
-
-    function loadJs (s = '', b = true, c = false) {
-        if (!s) {
-            return false;
-        }
-
-        let o = document.createElement('script');
-        o.type = 'text/javascript';
-        o.src = s;
-        o.async = b;
-        o.charset = sCharset;
-
-        if (c) {
-            if (o.addEventListener) {
-                o.addEventListener('load', function () {
-                    window[c]();
-                }, false);
-            } else if (o.attachEvent) {
-                o.attachEvent('onreadystatechange', function () {
-                    var target = window.event.srcElement;
-                    if (target.readyState == 'loaded') {
-                        window[c]();
-                    }
-                });
-            }
-        }
-
-        head.appendChild(o);
-    }
-
-    var sOrigin = '';
-    function queryMasterOrigin () {
-        let sTag = '.';
-        sOrigin = window.location.origin;
-        let a = sOrigin.split(sTag);
-        let l = a.length;
-        let s = window.location.protocol;
-        sOrigin = a[l - 2] + sTag + a[l - 1];
-        sOrigin = sOrigin.replace(s + '//', '');
-        sOrigin = s + '//' + sOrigin;
-        return sOrigin;
-    }
-    queryMasterOrigin();
-
-    const sCharset = 'utf-8'; // 编码
-    const sIndexJs = sOrigin + '/public_static_resource/js/index.js?ver=dasdasdasdasdas';
-    window.onload = loadJs(sIndexJs);
-</script>
 </html>
