--- a/project/chat_forum_more_project/web/storage.html
+++ b/project/chat_forum_more_project/web/storage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="/public_static_resource/js/public/localstorage_post_message.js?ver=dasdasdasdasdas" charset="utf-8"></script>
+    <script type="text/javascript" src="/static_resource/js/public/localstorage_post_message.js?ver=23123123" charset="utf-8"></script>
 </head>
 <body>
 </body>
