--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <script type="text/javascript" src="/static_resource/js/index.js?ver=xzzxvsaddssdas2fd" async="" charset="utf-8" id="zzz"></script>
+    <script type="text/javascript" src="/static_resource/js/index.js?ver=addsdddddsdddddad" async="" charset="utf-8" id="index_js_script"></script>
 </head>
 <body>
 </body>
