--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -1,9 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
-    <script type="text/javascript" src="/static_resource/js/index.js?ver=addsdddddsdddddad" async="" charset="utf-8" id="index_js_script"></script>
+    <meta id="copyright_content">
+    <script type="text/javascript" src="/static_resource/js/index.js?ver=vdqsdsaqdsdqdqwqdsds" charset="utf-8"></script>
 </head>
 <body>
-</body>
-</html>
