--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -2,6 +2,6 @@
 <html>
 <head>
     <meta id="copyright_content">
-    <script type="text/javascript" src="/static_resource/js/index.js?ver=vdqsdsaqdsdqdqwqdsds" charset="utf-8"></script>
+    <script type="text/javascript" src="/static_resource/js/index.js?ver=vdqsdsaqdsdqdqwqdadddsds" charset="utf-8" id="index_js_script"></script>
 </head>
 <body>
