--- a/project/chat_forum_more_project/web/storage.html
+++ b/project/chat_forum_more_project/web/storage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta charset="utf-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
     <script type="text/javascript" src="/static_resource/js/public/localstorage_post_message.js?ver=23123123" charset="utf-8"></script>
 </head>
 <body>
