--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta id="copyright_content">
-    <script type="text/javascript" src="/static_resource/js/base.js?ver=123z3az2sds1ad3e2azz32a1qns1az" charset="utf-8" id="index_js_script"></script>
 </head>
 <body>
+<div id="dom_father"></div>
+<div id="shade_father"></div>
+<div id="storage_father"></div>
+<div id="notice_father"></div>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=541z1zzza2adas2sazaz1z2zdaszz3zz1z1z4z2z1dasd2z1das1z3zzzz2zdaszadsa2z1dsadsaz2z2zzzz3sa2sz112" charset="utf-8" async="async" id="index_js_script"></script>
