优化，优化遮罩层顺序，优化添加dom节点

--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -3,8 +3,8 @@
 <head>
 </head>
 <body>
-<div id="dom_father"></div>
+<div id="dom_father" class="opacity_hidden"></div>
 <div id="shade_father"></div>
 <div id="storage_father"></div>
 <div id="notice_father"></div>
-<script type="text/javascript" src="/static_resource/js/base.js?ver=541z1zzza2adas2sazaz1z2zdaszz3zz1z1z4z2z1dasd2z1das1z3zzzz2zdaszadsa2z1dsadsaz2z2zzzz3sa2sz112" charset="utf-8" async="async" id="index_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=875z3111" charset="utf-8" async="async" id="index_js_script"></script>
