--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -7,4 +7,4 @@
 <div id="shade_father"></div>
 <div id="storage_father"></div>
 <div id="notice_father"></div>
-<script type="text/javascript" src="/static_resource/js/base.js?ver=875z3111" charset="utf-8" async="async" id="index_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=875zdad1ad11dasddsa3123dsadas231das2d31asd4sdsdadasdas41sddd2asd3333xx312341x1111" charset="utf-8" async="async" id="index_js_script"></script>
