优化定时器

--- a/project/chat_forum_more_project/localstorage/storage.html
+++ b/project/chat_forum_more_project/localstorage/storage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="/static_resource/js/public/localstorage_post_message.js?ver=23123123" charset="utf-8"></script>
+    <script type="text/javascript" src="/static_resource/js/public/localstorage_post_message.js?ver=23dsad1123123" charset="utf-8"></script>
 </head>
 <body>
 </body>
