优化 脚部 语言 替换

--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -7,4 +7,4 @@
 <div id="shade_father"></div>
 <div id="storage_father"></div>
 <div id="notice_father"></div>
-<script type="text/javascript" src="/static_resource/js/base.js?ver=dadasdasz1dsadsaadsasdsadsadsadsadsadsadasdsasdasd" charset="utf-8" async="async" id="index_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=369852147852ad" charset="utf-8" async="async" id="index_js_script"></script>
