添加localstorage禁用转台检查

--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -3,8 +3,9 @@
 <head>
 </head>
 <body>
+<noscript>Your browser does not support JavaScript!</noscript>
 <div id="dom_father" class="opacity_hidden"></div>
 <div id="shade_father"></div>
 <div id="storage_father"></div>
 <div id="notice_father"></div>
-<script type="text/javascript" src="/static_resource/js/base.js?ver=369852147852ad" charset="utf-8" async="async" id="index_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=3698dds1dsaadsaa52147852add" charset="utf-8" async="async" id="index_js_script"></script>
