--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -3,9 +3,12 @@
 <head>
 </head>
 <body>
-<noscript>Your browser does not support JavaScript!</noscript>
-<div id="dom_father" class="opacity_hidden"></div>
-<div id="shade_father"></div>
-<div id="storage_father"></div>
-<div id="notice_father"></div>
-<script type="text/javascript" src="/static_resource/js/base.js?ver=3698dds1dsaadsaa52147852add" charset="utf-8" async="async" id="index_js_script"></script>
+<div id="body">
+    <div id="dom_father">
+        <noscript>Your browser does not support JavaScript!</noscript>
+    </div>
+    <div id="shade_father"></div>
+    <div id="storage_father"></div>
+    <div id="notice_father"></div>
+</div>
+<script type="text/javascript" src="/static_resource/js/base.js?ver=951753987dasddasddasddasddasddsad4123985dasddsa" charset="utf-8" async="async" id="index_js_script"></script>
