--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE HTML>
-<html>
+<html lang="zh-cn">
 <head>
+    <meta id="copyright_content" name="Copyright" content="版权所有，保留一切权利。">
 </head>
 <body>
 <div id="body">
     <noscript>Your browser does not support JavaScript!</noscript>
 </div>
-<script type="text/javascript" src="/static_resource/js/1.js?ver=6" charset="utf-8" async="async" id="first_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/1.js?ver=71" charset="utf-8" async="async" id="first_js_script"></script>
