--- a/project/chat_forum_more_project/localstorage/storage.html
+++ b/project/chat_forum_more_project/localstorage/storage.html
@@ -2,8 +2,6 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="/localstorage_post_message.js?ver=23dsad11233213123" charset="utf-8"></script>
+    <script type="text/javascript" src="/localstorage_post_message.js?ver=187" charset="utf-8"></script>
 </head>
 <body>
-</body>
-</html>
