--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -6,4 +6,4 @@
 <div id="body">
     <noscript>Your browser does not support JavaScript!</noscript>
 </div>
-<script type="text/javascript" src="/static_resource/js/1.js?ver=188" charset="utf-8" async="async" id="first_js_script"></script>
+<script type="text/javascript" src="/static_resource/js/1.js?ver=1111111112" charset="utf-8" async="async" id="first_js_script"></script>
