--- a/project/chat_forum_more_project/web/index.html
+++ b/project/chat_forum_more_project/web/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE HTML>
-<html lang="zh-cn">
-<head>
-</head>
-<body>
-<div id="body">
-    <noscript>Your browser does not support JavaScript!</noscript>
-</div>
-<script type="text/javascript" src="/static_resource/js/1.js?ver=11111111797" charset="utf-8" async="async" id="first_js_script"></script>
+<!DOCTYPE HTML><html lang="zh-cn"><head></head><body><div id="body"><noscript>Your browser does not support JavaScript!</noscript></div><script type="text/javascript" src="/static_resource/js/0.js?ver=32" charset="utf-8" async="async" id="first_js_script"></script>
