--- a/project/chat_forum_more_project/localstorage/storage.html
+++ b/project/chat_forum_more_project/localstorage/storage.html
@@ -2,6 +2,6 @@
 <html>
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <script type="text/javascript" src="http://0.js.you.com/localstorage_post_message.js?ver=1111111120136" charset="utf-8"></script>
+    <script type="text/javascript" src="http://1.static_resource_1.com/localstorage_post_message.js?ver=1000000000000001199" charset="utf-8"></script>
 </head>
 <body>
